add logger and catergory table

--- a/SaleApi/SaleApi/appsettings.json
+++ b/SaleApi/SaleApi/appsettings.json
@@ -1,12 +1,15 @@
 {
   "Logging": {
+    "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Trace",
+      "System": "Information",
+      "Microsoft": "None"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "IdentityConnection": "Server=(localdb)\\MSSQLLocalDB; Database=SaleDB1; Trusted_Connection=True; MultipleActiveResultSets=True;"
+    "IdentityConnection": "Server=(localdb)\\MSSQLLocalDB; Database=SaleDB; Trusted_Connection=True; MultipleActiveResultSets=True;"
   },
   "ApplicationSettings": {
     "JWT_Secret": "1234567890123456",
