fix bug log4net

--- a/SaleApi/SaleApi/appsettings.json
+++ b/SaleApi/SaleApi/appsettings.json
@@ -9,7 +9,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "IdentityConnection": "Server=(localdb)\\MSSQLLocalDB; Database=SaleDB; Trusted_Connection=True; MultipleActiveResultSets=True;"
+    "IdentityConnection": "Server=(localdb)\\MSSQLLocalDB; Database=SaleDB1; Trusted_Connection=True; MultipleActiveResultSets=True;"
   },
   "ApplicationSettings": {
     "JWT_Secret": "1234567890123456",
