--- a/SaleApi/SaleApi/log4net.config
+++ b/SaleApi/SaleApi/log4net.config
@@ -1,23 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<log4net debug="false">
-  <appender name="LogFileAppender" type="log4net.Appender.FileAppender">
-    <param name="File" value="C:\Log\log12.log"/>
-    <param name="DatePattern" value="yyyy-MM-dd&quot;/logs.log&quot;"/>
-    <param name="StaticLogFileName" value="false"/>
-    <param name="RollingStyle" value="Composite"/>
-    <param name="AppendToFile" value="true"/>
-    <param name="MaximumFileSize" value="1024MB"/>
-    <param name="MaxSizeRollBackups" value="50"/>
+<log4net>
+  <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+    <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+    <file value="C:\Log\" />
+    <datePattern value="yyyy-MM-dd.'txt'"/>
+    <staticLogFileName value="false"/>
+    <appendToFile value="true"/>
+    <rollingStyle value="Date"/>
+    <maxSizeRollBackups value="100"/>
+    <maximumFileSize value="15MB"/>
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date{yyyy/MM/dd HH:mm:ss.fff} %-5level [%-4thread] %logger - %message%newline"/>
+      <conversionPattern value="%date [%thread] %-5level App  %newline %message %newline %newline"/>
     </layout>
   </appender>
-  <filter type="log4net.Filter.LevelMatchFilter">
-    <acceptOnMatch value="false" />
-    <levelToMatch  value="INFO" />
-  </filter>
   <root>
     <level value="ALL"/>
-    <appender-ref ref="LogFileAppender"/>
+    <appender-ref ref="RollingLogFileAppender"/>
   </root>
 </log4net>
